2004-04-15  Richard Hult  <richard@imendio.com>

	* data/glade/html-output.glade:
	* src/planner-html-plugin.c: (html_plugin_export): Hide the remote
	saving for now since it doesn't really work.

2004-04-15  Richard Hult  <richard@imendio.com>

	* configure.in: Disable dotnet by default.
	* src/planner-task-tree.c: (planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down): Clean up a bit.

2004-04-15  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-assignment.c: (assignment_set_property):
	* libplanner/mrp-object.c: (mrp_object_set_property):
	* src/planner-task-dialog.c:
	(task_dialog_resource_units_cell_edited): Workaround for bug
	#138368, based on patch from Lincoln.

2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c: (planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down): Patch from Lincoln.

2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_do_save_as): Fix build.

2004-04-14  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-project.c: (mrp_project_save_as):
	* src/planner-window.c: (window_do_save_as): Fix bug #139317,
	based on patch from Doroszlai Attila.
	
2004-04-09  Richard Hult  <richard@imendio.com>

	* src/planner-resource-dialog.c: (resource_dialog_name_changed_cb),
	(resource_dialog_short_name_changed_cb),
	(resource_dialog_resource_type_changed_cb),
	(resource_dialog_type_changed_cb),
	(resource_dialog_group_changed_cb),
	(resource_dialog_email_changed_cb),
	(resource_dialog_cost_changed_cb): Block on the correct user data,
	and handle non-numerical input better.

2004-04-08  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c:
	(planner_gantt_model_get_path_from_task):
	* src/planner-task-tree.c: (planner_task_tree_remove_task),
	(planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down),
	(planner_task_tree_set_anchor): Commit patch for bug #138595 from
	Lincoln Phipps. Also clean up task removal a bit and add anchor